# haskell-book-exercises

./: README.md  len.hs  test.hs
chapter10/: exercises.hs  intermission.hs  scans.hs
chapter11/: adts.hs  binarytree.hs  exercises.hs  huttonsrazor.hs  intermission.hs  jammin.hs  phone.hs  vigenere-cipher.hs
chapter12/: binarytree.hs  eitherlib.hs  exercises.hs  maybelib.hs  natural.hs  signaling.hs
chapter13/: palindrome.hs  persongame.hs
chapter15/: MonoidLaws.hs  exercises.hs  intermission.hs  madlib.hs
chapter16/: FlipFunctor.hs  FunctorLaws.hs  NaturalTransformation.hs  ReplaceExperiment.hs  exercises.hs  functors.hs  intermission.hs
chapter17/: ApplicativeLaws.hs  Combinations.hs  ZipListMonoid.hs  applicatives.hs  exercises.hs  intermission.hs  listap.hs
chapter18/: BadMonad.hs  EitherMonad.hs  dosyntax.hs  exercises.hs  intermission.hs  kleisli.hs  monads.hs
chapter19/urlshortener/: LICENSE  README.md  stack.yaml  urlshortener.cabal
chapter19/urlshortener/app/: Main.hs
chapter2/: exercises.hs  intermission.hs
chapter20/: exercises.hs  foldable.hs  intermission.hs
chapter21/: exercises.hs
chapter22/: ReaderPractice.hs  intermission.hs  reader.hs
chapter23/: RandomExample.hs  RandomStateExample.hs  exercises.hs  fizzbuzz.hs  intermission.hs  state.hs
chapter3/: exercises.hs  global.hs  print3.hs  reverse.hs
chapter4/: exercises.hs  intermission.hs
chapter5/: arith3broken.hs  exercises.hs  sing.hs  type-kwon-do.hs  types.hs
chapter6/: exercises.hs  intermission.hs  typeclasses.hs
chapter7/: arith4.hs  exercises.hs  greetIfCool.hs  (+3 more)
(+28 files in other folders)
