name:                urlshortener
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gvolpe/haskell-book-exercises/tree/master/chapter19/urlshortener
license:             BSD3
license-file:        LICENSE
author:              Gabriel Volpe
maintainer:          gvolpe@github.com
copyright:           Copyright: (c) 2017 Gabriel Volpe
category:            Demo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable urlshortener-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring
                     , hedis
                     , mtl
                     , network-uri
                     , random
                     , scotty
                     , semigroups
                     , text
                     , transformers
  default-language:    Haskell2010

test-suite urlshortener-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gvolpe/haskell-book-exercises/tree/master/chapter19/urlshortener
